check_errors6.txt
    Checking swe-edge-egress-tls v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\tls)
    Checking swe-edge-egress-auth v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\auth)
    Checking swe-edge-egress-cache v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\cache)
    Checking swe-edge-egress-cassette v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\cassette)
    Checking swe-edge-egress-http-transport v0.1.0 (C:\phd-systems\swelabs\edge\egress\http\main\features\transport)
error[E0425]: cannot find value `b` in this scope
  --> main\features\cache\tests\builder_e2e_test.rs:33:5
   |
33 |     b.build().expect("e2e with_config build must succeed");
   |     ^ not found in this scope

error[E0599]: no method named `build` found for struct `CacheLayer` in the current scope
  --> main\features\cache\tests\builder_e2e_test.rs:19:10
   |
17 |       let layer: CacheLayer = build_cache_layer(CacheConfig::default())
   |  _____________________________-
18 | |         .expect("builder() must succeed")
19 | |         .build()
   | |         -^^^^^ method not found in `CacheLayer`
   | |_________|
   |

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
   --> main\features\tls\tests\tls_factory_int_test.rs:136:17
    |
136 |     let e_pem = ApplicationConfigBuilder::with_config(TlsConfig::Pem {
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
   --> main\features\tls\tests\tls_factory_int_test.rs:143:26
    |
143 |     let e_pkcs12_no_pw = ApplicationConfigBuilder::with_config(TlsConfig::Pkcs12 {
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
   --> main\features\tls\tests\tls_factory_int_test.rs:151:32
    |
151 |     let e_pkcs12_missing_env = ApplicationConfigBuilder::with_config(TlsConfig::Pkcs12 {
    |                                ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0277]: can't compare `&u64` with `{integer}`
  --> main\features\cache\tests\builder_e2e_test.rs:32:5
   |
32 |     assert_eq!(&b_cfg.default_ttl_seconds, 300);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u64 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u64`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

error[E0277]: can't compare `&u64` with `{integer}`
  --> main\features\cache\tests\builder_e2e_test.rs:40:5
   |
40 |     assert_eq!(&b_cfg.max_entries, 100);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no implementation for `&u64 == {integer}`
   |
   = help: the trait `PartialEq<{integer}>` is not implemented for `&u64`
help: consider dereferencing here
  --> C:\Users\elvis\.rustup\toolchains\stable-x86_64-pc-windows-msvc\lib/rustlib/src/rust\library\core\src\macros\mod.rs:46:22
   |
46 |                 if !(**left_val == *right_val) {
   |                      +

For more information about this error, try `rustc --explain E0433`.
Some errors have detailed explanations: E0277, E0425, E0599.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `swe-edge-egress-tls` (test "tls_factory_int_test") due to 3 previous errors
warning: build failed, waiting for other jobs to finish...
error: could not compile `swe-edge-egress-cache` (test "builder_e2e_test") due to 4 previous errors
warning: unused import: `build_auth_middleware`
  --> main\features\auth\tests\env_credential_resolver_int_test.rs:14:28
   |
14 | use swe_edge_egress_auth::{build_auth_middleware, AuthConfig, Error};
   |                            ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\env_credential_resolver_int_test.rs:24:5
   |
24 |     ApplicationConfigBuilder::with_config(AuthConfig::Bearer {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\env_credential_resolver_int_test.rs:38:5
   |
38 |     ApplicationConfigBuilder::with_config(AuthConfig::Basic {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\env_credential_resolver_int_test.rs:52:5
   |
52 |     ApplicationConfigBuilder::with_config(AuthConfig::Header {
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\env_credential_resolver_int_test.rs:69:15
   |
69 |     let err = ApplicationConfigBuilder::with_config(AuthConfig::Bearer {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
  --> main\features\auth\tests\env_credential_resolver_int_test.rs:89:15
   |
89 |     let err = ApplicationConfigBuilder::with_config(AuthConfig::Header {
   |               ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
   --> main\features\auth\tests\env_credential_resolver_int_test.rs:112:18
    |
112 |     let result = ApplicationConfigBuilder::with_config(AuthConfig::Bearer {
    |                  ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

error[E0433]: cannot find type `ApplicationConfigBuilder` in this scope
   --> main\features\auth\tests\env_credential_resolver_int_test.rs:135:14
    |
135 |     let mw = ApplicationConfigBuilder::with_config(AuthConfig::Bearer {
    |              ^^^^^^^^^^^^^^^^^^^^^^^^ use of undeclared type `ApplicationConfigBuilder`

warning: `swe-edge-egress-auth` (test "env_credential_resolver_int_test") generated 1 warning
error: could not compile `swe-edge-egress-auth` (test "env_credential_resolver_int_test") due to 7 previous errors; 1 warning emitted
